# asbel-lang

./: .gitignore  COMPILER-MVP-SYNTAX.md  Cargo.toml  DOCS-ABLE.md  PRD-ASBEL-LANG.md  README.md  ROADMAP.md
.cargo/: config.toml
asbel-cli/: Cargo.toml
asbel-compiler/: Cargo.toml
asbel-compiler/src/: lib.rs  parser.rs
asbel-lsp/: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml
compiler/src/: ast.rs  lexer.rs  lib.rs  parser.rs  symbol_table.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/layouts/: AppLayout.vue
frontend/src/router/: index.js
frontend/src/views/: CliReferencePage.vue  GettingStartedPage.vue  HomePage.vue  NotFoundPage.vue  RoadmapPage.vue
frontend/src/views/documentation/: DocSectionPage.vue  DocumentationPage.vue
frontend/src/views/documentation/content/: ConcurrencyParallelismDoc.vue  ControlFlowDoc.vue  FfiDoc.vue  FunctionsDoc.vue  FutureDirectionsDoc.vue  IntroductionDoc.vue  LambdasUfcsDoc.vue  LoopsRangesDoc.vue  PipelinesDoc.vue  StructsInterfacesMacrosDoc.vue  TestingDoc.vue  ToolingEcosystemDoc.vue  VariablesTypesDoc.vue
stdlib/: Cargo.toml
