[workspace]
resolver = "2"
members = [
    "asbel-compiler",
    "stdlib",
    "asbel-cli",
    "asbel-lsp",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Your Name <you@example.com>"] # TODO: Replace with your details

[workspace.dependencies]
# Common dependencies can be added here
# Example:
# anyhow = "1.0"
# serde = { version = "1.0", features = ["derive"] }
# clap = { version = "4.0", features = ["derive"] } 